--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background-color:lightgreen;
+  font-weight: 100;
+  font-style: italic;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
